--- a/OneDrive/바탕 화면/웹/login.css
+++ b/OneDrive/바탕 화면/웹/login.css
@@ -311,3 +311,21 @@ body {
 	height: 35px;
 	width: 35px;
 }
+
+.social-kakao {
+  background-image: url("main_images/kakao.png");
+  background-size: 27px;
+  background-position: center;
+}
+
+.social-naver {
+  background-image: url("main_images/naver.png");
+  background-size: 28px;
+  background-position: center;
+}
+
+.social-google {
+  background-image: url("main_images/google.png");
+  background-size: 28px;
+  background-position: center;
+}
